--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="cl.flores.nicolas.spheroedu.MainActivityFragment"
+    android:name="cl.flores.nicolas.spheroedu.fragments.DataFragment"
     tools:layout="@layout/fragment_data" android:layout_width="match_parent"
     android:layout_height="match_parent" />
