--- a/app/src/main/res/layout/fragment_slave.xml
+++ b/app/src/main/res/layout/fragment_slave.xml
@@ -1,31 +1,30 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     tools:context="cl.flores.nicolas.spheroedu.fragments.SlaveFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/loading_text"
-        android:layout_gravity="center_horizontal|top"
+        android:layout_above="@+id/slaveLoadingPb"
+        android:layout_centerHorizontal="true"
+        android:text="@string/server_loading"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
-        android:typeface="serif"
-        android:layout_above="@+id/loadingPb"
-        android:layout_centerHorizontal="true" />
+        android:typeface="serif" />
 
     <ProgressBar
+        android:id="@+id/slaveLoadingPb"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/loadingPb"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:indeterminate="true"
         android:indeterminateBehavior="cycle"
-        android:indeterminateOnly="true"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:indeterminateOnly="true" />
 
 </RelativeLayout>
