--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="REQUEST_ENABLE_BT">0x1</integer>
-    <integer name="REQUEST_DISCOVERABLE_BT">0x2</integer>
+    <!--Integers-->
+    <integer name="REQUEST_ENABLE_BT">0x01</integer>
+    <integer name="REQUEST_DISCOVERABLE_BT">0x02</integer>
+    <integer name="MIN_CONNECTED_DEVICES">0x01</integer>
+    <integer name="MAX_CONNECTED_DEVICES">0x03</integer>
+
+    <!--Strings-->
+    <string name="app_name">SpheroEdu</string>
     <string name="APPLICATION_UUID">5CA3C87A-9331-4A73-AA42-737F971FDA37</string>
 </resources>
