--- a/app/src/main/res/layout/fragment_slave.xml
+++ b/app/src/main/res/layout/fragment_slave.xml
@@ -26,7 +26,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:indeterminate="true"
-        android:indeterminateBehavior="cycle"
+        android:indeterminateBehavior="repeat"
         android:indeterminateOnly="true" />
 
 </RelativeLayout>
