--- a/app/src/main/res/layout/activity_master.xml
+++ b/app/src/main/res/layout/activity_master.xml
@@ -1,8 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cl.flores.nicolas.spheroedu.fragments.MasterFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="cl.flores.nicolas.spheroedu.activities.MasterActivity">
 
     <TextView
         android:id="@+id/foundDevicesTv"
@@ -20,18 +25,18 @@
         android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/connectBtn"
         android:layout_below="@+id/foundDevicesTv"
         android:layout_centerHorizontal="true"
-        android:choiceMode="multipleChoice"
-        android:layout_above="@+id/connectBtn" />
+        android:choiceMode="multipleChoice" />
 
     <Button
+        android:id="@+id/connectBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/connect_btn"
-        android:id="@+id/connectBtn"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:clickable="true" />
-
+        android:clickable="true"
+        android:onClick="connectButton"
+        android:text="@string/connect_btn" />
 </RelativeLayout>
