--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Integers-->
-    <integer name="REQUEST_ENABLE_BT">0x01</integer>
-    <integer name="REQUEST_DISCOVERABLE_BT">0x02</integer>
-    <integer name="MIN_CONNECTED_DEVICES">0x01</integer>
-    <integer name="MAX_CONNECTED_DEVICES">0x03</integer>
+    <integer name="REQUEST_ENABLE_BT">0x0101</integer>
+    <integer name="REQUEST_DISCOVERABLE_BT">0x0102</integer>
+    <integer name="MIN_CONNECTED_DEVICES">0x0001</integer>
+    <integer name="MAX_CONNECTED_DEVICES">0x0003</integer>
 
     <!--Strings-->
     <string name="app_name">SpheroEdu</string>
+    <string name="MASTER_APP_NAME">Maestro SpheroEdu</string>
+    <string name="SLAVE_APP_NAME">Esclavo SpheroEdu</string>
     <string name="APPLICATION_UUID">5CA3C87A-9331-4A73-AA42-737F971FDA37</string>
+    <string name="USER_NAME">user_name</string>
 </resources>
