--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -18,7 +18,7 @@
         android:text="Your Sphero color is"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Space
+    <TextView
         android:id="@+id/spheroColor"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
